--- a/README.org
+++ b/README.org
@@ -65,6 +65,24 @@ its content.
 
 ** Septiembre 2024
 
+*** 21-Sep-24
++ [[https://adomani.github.io/Syllabus/MA4N1][Course: Theorem proving with Lean]]. ~ Damiano Testa. #ITP #LeanProver #Math
++ [[https://github.com/adomani/MA4N1_Theorem_proving_with_Lean/blob/master/MA4N1_2023/L17_navigating_Mathlib.lean][Finding lemmas in Mathlib]]. ~ Damiano Testa. #ITP #LeanProver #Mathlib
++ [[https://github.com/faenuccio-teaching/M2Lyon2425][Course: Repository for the Lean master program in Lyon for 2024-25]]. ~ Filippo A. E. Nuccio et als. #ITP #LeanProver #Math
++ [[https://github.com/rkthomps/weekly-lean][Weekly-Lean: The Lean weekly challenge]]. ~ Kyle Thompson, Saketh Kasibatla & Nico Lehmann. #ITP #LeanProver
++ [[https://github.com/ljtc/cursoLean][Mini-curso de Lean]]. ~ Luis Turcio. #ITP #LeanProver #Logic #Math
++ [[https://www.youtube.com/live/8YrIWiAJhA4][Lean - Tácticas y proposiciones]]. ~ Luis Turcio. #ITP #LeanProver
++ [[https://www.youtube.com/watch?v=e5qM6yUvues][Lean - Proposiciones y primer orden]]. ~ Luis Turcio. #ITP #LeanProver #Logic
++ [[https://www.youtube.com/live/CIkjzDwaaBg][Lean - Conjuntos 1]]. ~ Luis Turcio. #ITP #LeanProver #Logic #Math
++ [[https://www.youtube.com/live/vVp3_HhjGTo][Lean - Funciones]]. ~ Luis Turcio. #ITP #LeanProver #Logic #Math
++ [[https://github.com/miguelmarco/topologia_general_lean][Topología general en Lean3]]. ~ Miguel Marco. #ITP #LeanProver #Lean3 #Math
++ [[https://github.com/miguelmarco/topologia_general_game][Juego LEAN de topología general]]. ~ Miguel Marco. #ITP #LeanProver #Lean4 #Math
++ [[https://github.com/samvang/StoneDualityInLean][Stone duality in Lean]]. ~ Dagur Ásgeirsson, Sam van Gool, Tomáš Jakl & Filippo A.E. Nuccio. #ITP #LeanProver #Lean4 #Math
++ [[https://www.sciencedirect.com/science/article/pii/S0304397524004936][Probabilistic unifying relations for modelling epistemic and aleatoric uncertainty: semantics and automated reasoning with theorem proving]]. ~ Kangfeng Ye, Jim Woodcock & Simon Foster. #ITP #IsabelleHOL
++ [[https://cacm.acm.org/blogcacm/no-generalization-without-understanding-and-explanation/][No generalization without understanding and explanation (Why AI needs symbolic and logical reasoning)]]. ~ Walid Saba. #AI #LLMs #DeepLearning #Logic
++ [[https://qwenlm.github.io/blog/qwen2.5-math/][Qwen2.5-Math: The world's leading open-sourced mathematical LLMs]]. #LLMs #Math
++ [[https://arxiv.org/abs/2409.12186][Qwen2.5-Coder Technical Report]]. ~ Binyuan Hui et als. #LLMs #Programming
+
 *** 20-Sep-24
 + [[https://jaalonso.github.io/calculemus/posts/2024/09/19-gausss_formula_for_summation/][Proofs of "∑i<n. i = n(n-1)/2" in Lean4 and Isabelle/HOL]]. #ITP #Lean4 #IsabelleHOL #Math #CaWlculemus
 + [[https://arxiv.org/abs/2310.02704][Extending Isabelle/HOL's code generator with support for the Go programming language]]. ~ Terru Stübinger & Lars Hupel. #ITP #IsabelleHOL #GoLang
@@ -1559,7 +1577,6 @@ its content.
 + [[https://bit.ly/41LHgJg][Machine learning and symbolic AI for mathematics]]. ~ Jeremy Avigad. #MachineLearning #AI #ITP #Math
 + [[https://bit.ly/3RJpG3F][Functional data structures and algorithms]]. ~ Tobias Nipkow et als. #eBook #ITP #IsabelleHOL #FunctionalProgramming #Algorithms
 + [[https://bit.ly/41DI42N][Higher order model checking in Isabelle for human centric infrastructure security]]. ~ Florian Kammüller. #ITP #IsabelleHOL
-
 
 * Lecturas del año 2023
 
